--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,17 @@
+black==21.8b0
 click==8.0.1
+DateTime==4.3
 dnspython==2.1.0
+dominate==2.6.0
 Flask==2.0.1
+Flask-Bootstrap==3.3.7.1
 Flask-PyMongo==2.3.0
 itsdangerous==2.0.1
+pathspec==0.9.0
 pymongo==3.12.0
+pytz==2021.1
+regex==2021.8.28
+tomli==1.2.1
+visitor==0.1.3
 Werkzeug==2.0.1
+zope.interface==5.4.0
